RESOLVED FIXED141169
REGRESSION(r179477): arguments simplification no longer works
https://bugs.webkit.org/show_bug.cgi?id=141169
Summary REGRESSION(r179477): arguments simplification no longer works
Filip Pizlo
Reported 2015-02-02 13:56:24 PST
That change broke arguments simplification because PhantomLocal on the arguments register tells arguments simplification that it can't simplify anything. PhantomLocal also confuses the Flush strength reduction and we were also missing some other cases there. This resolves all of those issues.
Attachments
the patch (2.82 KB, patch)
2015-02-02 14:01 PST, Filip Pizlo
mark.lam: review+
Filip Pizlo
Comment 1 2015-02-02 14:01:47 PST
Created attachment 245898 [details] the patch
Mark Lam
Comment 2 2015-02-02 14:14:37 PST
Comment on attachment 245898 [details] the patch You added a CPS rethreading phase. Have you run perf numbers to make sure that there's no regression? r=me if no perf regression.
Filip Pizlo
Comment 3 2015-02-02 15:34:35 PST
(In reply to comment #2) > Comment on attachment 245898 [details] > the patch > > You added a CPS rethreading phase. Have you run perf numbers to make sure > that there's no regression? > > r=me if no perf regression. Performance is good. This is a progression on earley and no significant changes elsewhere.
Filip Pizlo
Comment 4 2015-02-02 15:36:56 PST
Note You need to log in before you can comment on or make changes to this bug.