Source/JavaScriptCore/dfg/DFGStrengthReductionPhase.cpp
@@ -256,6 +256,8 @@ private:
                     case DoubleConstant:
                     case Int52Constant:
                     case GetScope:
+                    case PhantomLocal:
+                    case GetCallee:
                         break;
                 
                     default:
